@@ -1,0 +1,9 @@
+Title: LDAP: Improved validation of groups to attributes sync plugin
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.2.8p17
+Date: 1486382449
+Class: fix
+
+
